# python-anyconfig-ion-backend

./: .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
anyconfig_ion_backend/: __init__.py  ion.py
pkg/: entry_points.txt  nose.cfg  package.spec.in  run-backend-tests.sh  runtest.sh  test_requirements.txt
src/anyconfig_ion_backend/: __init__.py  ion_.py
tests/: 10_backend.py  90_plugin.py  ion.bin_data  ion_.py  plugin.py  test_plugin.py
tests/res/: ion.txt_data
