# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = anyconfig-ion-backend
#version = attr: anyconfig_ion_backend.__version__
description = Backend module for python-anyconfig to load and dump CBOR data
project_urls =
    CI: Github Actions = https://github.com/ssato/python-anyconfig-ion-backend/actions
    Download = https://pypi.python.org/pypi/anyconfig-ion-backend
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Bug Tracker = https://github.com/ssato/python-anyconfig-ion-backend/issues
    Source = https://github.com/ssato/python-anyconfig-ion-backend

long_description =
    This is a backend module for python-anyconfig to support to load and dump
    Amazon Ion data files.

    - Author: Satoru SATOH <satoru.satoh@gmail.com>
    - License: MIT

    SEE ALSO:

    - python-anyconfig: https://github.com/ssato/python-anyconfig
    - Amazon Ion: https://amzn.github.io/ion-docs/

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig-ion-backend
platforms =
    any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    anyconfig
    amazon.ion

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
anyconfig_backends =
    ion = anyconfig_ion_backend:Parser

# vim:sw=4:ts=4:et:
